use subpath to render README

--- a/package.yml
+++ b/package.yml
@@ -25,10 +25,11 @@ page:
         help:
             title: 'translate:help'
             icon: rex-icon fa-info-circle
-            itemclass: pull-right
+            subPath: 'README.md'
         clear_cache:
             title: 'translate:clear_cache'
             itemclass: 'pull-right'
+            linkClass: 'btn btn-delete'
             href:
                 page: redactor/profile
                 func: clear_cache
