--- a/package.yml
+++ b/package.yml
@@ -1,5 +1,5 @@
 package: redactor
-version: '2.6.0-dev-2025-04-21'
+version: '2.6.0'
 author: Friends Of REDAXO
 supportpage: github.com/FriendsOfREDAXO/redactor
 compile: 0
